# urc

./: .gitignore  CHANGELOG.md  LICENSE  NOTE.md  README.md  pyproject.toml
scripts/: 00_sanity.bash
tests/: test_io_ckpt.py  test_levelset.py  test_mdn.py  test_phi.py  test_quantiles.py  test_urc_module.py
urc/: __init__.py  config.py  device.py
urc/cli/: __init__.py  quick_sanity_run.py
urc/core/: __init__.py  metrics.py  state.py  urc_module.py
urc/density/: __init__.py  mdn.py
urc/io/: __init__.py  ckpt.py
urc/loss/: __init__.py  levelset.py
urc/phi/: __init__.py  image_phi.py  registry.py  transforms.py
urc/quantiles/: __init__.py  knn_quantiles.py  per_class_fifo.py
urc/tests/: test_phi.py
