[project]
name = "urc"
version = "0.1.0"
description = "Unified Region Calibration (URC): region-aware training via level-sets in φ-space."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name="Bob La", email="duc.la@monash.edu"}]
dependencies = [
    "torch>=2.3",
    "torchvision",
    "torchaudio",
    "numpy>=1.23",
    "pydantic>=2.6",
    "typing-extensions>=4.8",
    "click>=8.2.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.scripts]
urc = "urc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["urc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
